Opened 18 years ago

Closed 18 years ago

Last modified 18 years ago

#1079 closed bug (fixed)

KDL/reboot problems with Radeon driver/accelerant after r20271-r20278 applied

Reported by: umccullough Owned by: axeld
Priority: normal Milestone: R1
Component: Drivers/Graphics/radeon Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: x86

Description

After obtaining the changes to the Radeon driver/accelerant committed in hrev20271 through hrev20278, I am now having a problem changing my screen resolution to 1280x1024 or higher.

If I set only the current workspace to 1024x768, it KDLs in such a way that I can't read what it says on the screen (serial log to follow shortly).

If I set ALL workspaces simultaneously, I get a spontaneous reboot.

I have confirmed that reverting headers/private/graphics/radeon, src/add-ons/accelerants/radeon, and src/add-ons/kernel/drivers/graphics/radeon back to hrev20270 resolves the issue.

Change History (4)

comment:1 by umccullough, 18 years ago

Oops:

Hardware: PIII 600 w256mb memory and Radeon 9250 AGP

comment:2 by axeld, 18 years ago

Thanks for the report! Actually, I'm to blame that you still have that issue; I have got a patch from Euan for this already, I just didn't find the time to apply it yet.

I'll do so tomorrow, and hopefully, this will fix your problems. FWIW I have the same problem with my laptop with a Radeon FireGL Mobile 9000.

comment:3 by axeld, 18 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev20336. Can you confirm?

comment:4 by umccullough, 18 years ago

Sorry for the slow response, I've been a bit busy :)

Yes, works great now, I tested up to 1600x1200 with no issues on my side!

Thanks for the timely attention!

Note: See TracTickets for help on using tickets.