Patch by Euan Kirkhope: * Use AGP Bus manager module * Fixed wrong framebuffer address computation; this should fix bug #1079.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20336 a95241bf-73f2-0310-859d-f6bbb57e9c96