src/add-ons/kernel/drivers/graphics/radeon/global_data.c
@@ -16,3 +16,4 @@ int debug_level_error = 4;
 
 radeon_devices *devices;
 pci_module_info *pci_bus;
+agp_module_info *agp_bus;
